--- a/mod-2/2-0-0-html/lecture-code/index.html
+++ b/mod-2/2-0-0-html/lecture-code/index.html
@@ -1,2 +1,35 @@
-Hello World
-<h1>Hello World</h1>
+<!-- this is a comment -->
+<style>
+  /* CSS */
+  .fantasy {
+    font-family: fantasy;
+  }
+  .bold {
+    font-weight: bold;
+    color: purple;
+  }
+  #first-section {
+    /* background: red; */
+  }
+
+  #second-section {
+    /* background: green; */
+  }
+</style>
+<div id="first-section">
+  <h1 class="fantasy">My awesome website</h1>
+  <h4 class="fantasy">My hobbies are...</h4>
+  <hr />
+  <ul>
+    <li class="fantasy bold">coding</li>
+    <li>soccer</li>
+    <li class="bold">cooking</li>
+  </ul>
+</div>
+<div id="second-section">
+  <a href="https://en.wikipedia.org/wiki/Cat">Learn about cats!</a>
+  <h2>A picture of a cat</h2>
+  <img src="./cool-cat.png" alt="a cool cat" id="cat-image" class="picture" />
+</div>
+
+<!-- Semantic = "with meaning" -->
