--- a/mod-2/2-0-1-css/lecture-code/4-links-pseudo-selectors/index.html
+++ b/mod-2/2-0-1-css/lecture-code/4-links-pseudo-selectors/index.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <a href="#1">link</a>
-    <a href="#2">link</a>
-    <a href="#3">link</a>
-    <a href="#4">link</a>
+    <ul class="links-list">
+      <li><a href="#1">lin 1</a></li>
+      <li><a href="#2">link 2</a></li>
+      <li><a href="#3">link 3</a></li>
+      <li><a href="#4">link 4</a></li>
+    </ul>
+    <ul>
+      <li><a href="#1">link 5</a></li>
+      <li><a href="#2">link 6 </a></li>
+      <li><a href="#3">link 7</a></li>
+      <li><a href="#4">link 8</a></li>
+    </ul>
     <p id="1">1</p>
     <p id="2">2</p>
     <p id="3">3</p>
